Better error reporting when an unexpected exception is thrown.